--- a/src/components/FilterManagement/FilterManagement.css
+++ b/src/components/FilterManagement/FilterManagement.css
@@ -4,18 +4,19 @@
  bottom:100px;
 }
 .titleField{
-    margin-right: 30px;
+    position: relative;
+    right: 350px;
     text-align: left;
 }
 .filterbtn{
     position: relative;
-    right: 170px;
-    bottom: 90px;
+    right: 380px;
+    bottom: 30px;
 }
 
 .cancelbtn{
     position: relative;
     left: 550px;
-    bottom: 90px;
+    bottom: 400px;
 
 }
